revision 33 - 20100704                                              |
    * Feature request: Added progress bar to indicate the progress  |
      of a speed test                                               |
    * HTML and vB code output: Added a Google Chart URL showing     |
      average latency per ping group                                |
    * HTML and vB code output: Fixed a small bug regarding the      |
      "Speed only" mode                                             |


revision 32 - 20100703                                              |
    * Code refactoring for modular structure: libspeedtest library  |
      created, split source code files to separate directories etc. |


revision 31 - 20100701                                              |
    * QSpeedTest: Too many calls to processEvents() in the FileHost |
      class' "updateBytes" slot could potentially lead to crashes,  |
      so this statement was removed                                 |


revision 30 - 20100701                                              |
    * Major changes in console, HTML and vbCode output              |
    * Fixed Start button delay                                      |


revision 29 - 20100630                                              |
    * Reverted to r24                                               |
    * Always check for updated target list first                    |
    * QSpeedTest: Clicking Stop during domestic download speed test |
      did not cancel international speed test as well. Fixed        |
    * QSpeedTest: OS detection done when initializing program. This |
      trades a little time during program startup for faster        |
      printing of host information every time a test run starts     |
    * QSpeedTest: More responsive GUI during download speed tests   |
    * QSpeedTestCLI: A small cosmetic fix in stdout output          |
    * QSpeedTestCLI: CTRL+C now properly stops the program          |

